some basic edits

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title data-i18n="head.title">Upscuits | Uptime Biscuits</title>
+	<title data-i18n="head.title">Game platform | Uptime</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link href="css/upscuits.min.css?rel=1.3.2" rel="stylesheet">
@@ -12,10 +12,10 @@
 <body>
 	<div class="container">
 		<div class="jumbotron">
-			<h1><i class="icon-dashboard icon-red"></i> Upscuits <small data-i18n="head.subtitle">short for uptime-biscuit</small></h1>
+			<h1><i class="icon-dashboard icon-red"></i> Game platform <small data-i18n="head.subtitle">Is everything still up and running?</small></h1>
 
 			<p data-i18n="head.hero">
-				A quick overview of your server's uptime served on a nice dinner-tray.
+				Publisher / Developer / Gameplayer
 			</p>
 		</div>
 		
